bug fixed: adjust font color and button color to fit the current color theme and light/dark mode

--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -37,3 +37,7 @@
 .ingredients button {
   margin: 0 0 0 5px;
 }
+
+.create.dark {
+  color: #e4e4e4;
+}
